--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -4,7 +4,7 @@
 
 La mecánica clásica nos habla de un sistema físico definido que para todos los tiempos está especificado. Este sistema evolucionan de manera determinista dadas las ecuaciones de movimiento. Pero lo que sorprende al tratar con  sistemas termodinámicos es que aunque se hable de un sistema clásico este puede mostrar propiedades que dependan de promedios estadísticos \cite{CallenThermo}. La conexión que hay entre el determinismo y estas probabilidades es una discusión que no se ha podido solucionar dado a que han existido varias soluciones pero todas con sus fallas . Los métodos típicos requieren hablar de promedios de ensamble, promedios temporales, aleatoriedad. Todos estos conceptos siguen siendo muy debatidos y parecería que no solucionará ninguna pregunta seguir con ellos \cite{TodaStat}. Por eso se ha estado buscando nuevos fundamentos para la mecánica estadística.
 \\
-La mecánica estadística tiene como base el postulado de probabilidades iguales este viene dado por la ignorancia subjetiva que el observador del sistema tiene. Aunque la mecánica estadística no tiene problemas al comparar sus resultados teóricos con los experimentales, el cimiento filosófico en el que reposa da mucho de que hablar dando así posturas diferentes que desde los inicios de su teoría no han podido ser unificados. En este capítulo se expondrá cómo Popescu et al. en \cite{Popescu2006} muestran una posible luz sobre el problema de unificar las perspectivas de la mecánica estadística. La idea principal que se quiere mostrar es cómo se puede reemplazar el postulado de probabilidades iguales por un principio canónico general basado en el entrelazamiento cuántico, al poner el entrelazamiento cuántico como nuevo cimiento ya no se tiene probabilidades subjetivas sino objetivas dadas por la teoría  cuántica. Este nuevo enfoque permite evitar problemas con la ignorancia subjetiva pero también esquiva el problema de ergodicidad, gracias a esto se puede ver un fundamento más claro y sólido. 
+La mecánica estadística tiene como base el postulado de probabilidades iguales; este viene dado por la ignorancia subjetiva que el observador del sistema tiene. Aunque la mecánica estadística no tiene problemas al comparar sus resultados teóricos con los experimentales, el cimiento filosófico en el que reposa da mucho de que hablar dando así posturas diferentes que desde los inicios de su teoría no han podido ser unificados. En este capítulo se expondrá cómo Popescu et al. en \cite{Popescu2006} muestran una posible luz sobre el problema de unificar las perspectivas de la mecánica estadística. La idea principal que se quiere mostrar es cómo se puede reemplazar el postulado de probabilidades iguales por un principio canónico general basado en el entrelazamiento cuántico, al poner el entrelazamiento cuántico como nuevo cimiento ya no se tiene probabilidades subjetivas sino objetivas dadas por la teoría  cuántica. Este nuevo enfoque permite evitar problemas con la ignorancia subjetiva pero también esquiva el problema de ergodicidad, gracias a esto se puede ver un fundamento más claro y sólido. 
 \\
 Este capítulo solo se enfocará en mostrar cómo la mayoría de los estados del universo están termalizados sin hablar en ningún momento de la evolución de estos estados. Si en general los estados del universo están termalizados se esperaría que cualquier evolución lleve los estados al equilibrio pero en el siguiente capítulo se darán especificaciones de esta conjetura junto con detalles que hacen ver las complicaciones de formalizar las ideas intuitivas que se tienen sobre el equilibrio.
 \\
