--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 \usepackage[nottoc]{tocbibind}
 \usepackage[pdftex,
             pdfauthor={Germán Eduardo Osorio Leiva},
-            pdftitle={Revisión de los fundamentos termodinámicos desde la perspectiva de la teoría cuántica de la información},
+            pdftitle={Revisión de los fundamentos de la mecánica estadística desde la perspectiva de la teoría cuántica de la información},
             pdfsubject={Física},
             pdfkeywords={entrelazamiento, mecánica estadística},
             pdfproducer={Latex con hyperref},
@@ -184,11 +184,9 @@
 \thispagestyle{empty}
 \include{Capitulos/cap2}
 \thispagestyle{empty}
-\include{Capitulos/cap3}
-\thispagestyle{empty}
 \include{Capitulos/cap4}
 \thispagestyle{empty}
-\include{Capitulos/cap5}
+\include{Capitulos/cap3}
 \thispagestyle{empty}
 \include{Capitulos/Conclusiones}
 \thispagestyle{empty}
